@@ -18,8 +18,5 @@ dependencies {
 }
 
 tasks.withType<Test>().configureEach {
-  // required on jdk17
-  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
   jvmArgs("-Dotel.instrumentation.apache-elasticjob.experimental-span-attributes=true")
 }
